--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/style.css ">
+    <title>Chess box</title>
+    <link rel="stylesheet" href="style.css ">
 </head>
 <body>
     <div class="body">
